syntax = "proto3";

option csharp_namespace = "WebAPI.Grpc";

package product;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

service ProductGrpc {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse) {
    option (google.api.http) = {
      get: "/v1/products/{product_id}"
    };
  };
  
  rpc AddProduct(AddProductRequest) returns (AddProductResponse) {
    option (google.api.http) = {
      post: "/v1/products"
      body: "*"
    };
  };
  
  rpc RemoveProduct(RemoveProductRequest) returns (RemoveProductResponse) {
    option (google.api.http) = {
      delete: "/v1/products/{product_id}"
    };
  };
  
  rpc UpdateProductPrice(UpdateProductPriceRequest) returns (UpdateProductResponse) {
    option (google.api.http) = {
      put: "/v1/products/{product_id}"
      body: "*"
    };
  };
  
  rpc GetFilteredProducts(GetFilteredProductsRequest) returns (GetFilteredProductsResponse) {
    option (google.api.http) = {
      get: "/v1/products"
    };
  }
}

message GetFilteredProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  ProductType product_type = 3;
  google.protobuf.Timestamp created_date = 4;
  google.protobuf.Int64Value warehouse_id = 5;
}

message GetFilteredProductsResponse {
  repeated Product products = 1;
}

message AddProductRequest {
  string product_name = 1;
  DecimalValue product_price = 2;
  DecimalValue product_weight = 3;
  ProductType product_type = 4;
  google.protobuf.Timestamp created_date = 5;
  int64 warehouse_id = 6;
}

message GetProductRequest {
  int64 product_id = 1;
}

message Product {
  int64 product_id = 1;
  string product_name = 2;
  DecimalValue product_price = 3;
  DecimalValue product_weight = 4;
  ProductType product_type = 5;
  google.protobuf.Timestamp created_date = 6;
  int64 warehouse_id = 7;
}

message GetProductResponse {
  Product product = 1;
}

message AddProductResponse {
  Product product = 1;
}

message RemoveProductResponse {
  Product product = 1;
}

message UpdateProductResponse {
  Product product = 1;
}

message RemoveProductRequest {
  int64 product_id = 1;
}

message UpdateProductPriceRequest {
  int64 product_id = 1;
  DecimalValue product_price = 2;
}

message DecimalValue {
  int64 units = 1;
  sfixed32 nanos = 2;
}

enum ProductType {
  PRODUCT_TYPE_UNSPECIFIED = 0;
  PRODUCT_TYPE_GENERAL = 1;
  PRODUCT_TYPE_HOUSEHOLD_CHEMICALS = 2;
  PRODUCT_TYPE_TECH = 3;
  PRODUCT_TYPE_FOOD = 4;
}